# CxxBus

./: .gitignore  CMakeLists.txt  DBus.h  DBusConnection.cpp  DBusConnection.h  DBusHelpers.cpp  DBusHelpers.h  DBusMessage.cpp  DBusMessage.h  DBusReply.cpp  DBusReply.h  DBusTypes.cpp  DBusTypes.h  LICENSE  README.md  main.cpp  test_marshalling.cpp  test_message.cpp  test_unmarshalling.cpp  unittests.cpp
build-system/: CreateBinary.cmake  UnitTests.cmake
src/: CMakeLists.txt  ConstexprTypeName.h  DBus.h  DBusConcepts.h  DBusConnection.cpp  DBusConnection.h  DBusHelpers.cpp  DBusHelpers.h  DBusMessage.cpp  DBusMessage.h  DBusReply.cpp  DBusReply.h  DBusTypes.cpp  DBusTypes.h  main.cpp
src/test/: CMakeLists.txt  test_marshalling.cpp  test_message.cpp  test_unmarshalling.cpp
